<resources>
    <string name="app_name">Common Friend</string>
    <string name="i_will_send_you_a_text_with_verification_code">I will send you a text with a verification code.</string>
    <string name="to_verify_your_phone_number_we_ve_sent_you">To verify your phone number, I have sent you</string>
    <string name="digit_otp_at_91_9560505818">a 4 digit OTP at: </string>
    <string name="edit">Edit?</string>
    <string name="didn_t_get_a_code">Didn\'t get a code?</string>
    <string name="add">Add</string>
    <string name="gender">Gender</string>
    <string name="new_">New</string>
    <string name="non_vegetarian">Non Vegetarian</string>
    <string name="search_here">Search here</string>
    <string name="which_one_is_you">Which one is you?</string>
    <string name="choose_option">Choose Option</string>
    <string name="reselect_image">ReSelect Image</string>
    <string name="checkInternet">CheckInternet</string>
    <string name="profile">Profile</string>
    <string name="checklist">Checklist</string>
    <string name="photo">photo!</string>
    <string name="code">code.</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="close">close</string>
    <string name="Religion">Religion</string>
    <string name="successful">successful!</string>
    <string name="facebook_app_id">1371673643743124</string>
    <string name="fb_login_protocol_scheme">fb1371673643743124</string>
    <string name="facebook_client_token">e775e7682c75de124c7098f75e7e2af6</string>
    <string name="bugsnag_api_key">7a5705a9297a775f30c3c94862a07f65</string>
    <string name="location_api_key">AIzaSyCwokoXzd5Ox8rjwk1LkQQLzIEnrXxhtN8</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="yes">Yes</string>
    <string name="yes_">yes</string>
    <string name="full_time">Full-Time</string>
    <string name="where_are_you_located">Where are you \nlocated?</string>
    <string name="mumbai">Mumbai</string>
    <string name="strcontinue">Continue</string>
    <string name="done_">Done</string>
    <string name="how_tall_are_you">How tall \nare you?</string>
    <string name="what_religion_do_you_follow">What religion \ndo you follow?</string>
    <string name="hindu">Hindu</string>
    <string name="where_do_you_plan_to_settle">Where do you \n plan to settle?</string>
    <string name="what_is_your_net_worth">What is \nyour net worth? </string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="let_s_get_you_a_profile_photo">Let’s get you a\nprofile photo!</string>
    <string name="add_photos">Add photos to your album to start connecting and receiving requests!</string>
    <string name="display_picture">Display picture</string>
    <string name="display_picture_">Display Picture</string>
    <string name="enter_your_verification_code">Enter your \nverification code.</string>
    <string name="what_s_your_mobile_number">What’s your \nmobile number?</string>
    <string name="verification_successful">Verification \nsuccessful!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="similar">Similar</string>
    <string name="settle_location">Settle Location</string>
    <string name="settle_locations">Settle Locations</string>
    <string name="more_than">"More than "</string>
    <string name="born_in_bangalore_i_was">I Was Born in Bangalore, and I was brought up in New Delhi.</string>
    <string name="office">Office</string>
    <string name="annual_income">Annual Income</string>
    <string name="profile_unlocked">Profile unlocked</string>
    <string name="enable"><u>Enable</u></string>
    <string name="delhi_university">Delhi University</string>
    <string name="course">Course</string>
    <string name="special_certification">Special Certificate</string>
    <string name="post_graduation">Post Graduation</string>
    <string name="bca_computer_science">BCA, Computer science</string>
    <string name="college">College</string>
    <string name="education">Education</string>
    <string name="save">Save</string>
    <string name="please_select_image">Please Select First Image </string>
    <string name="photo_album">Photo Album</string>
    <string name="photo_album_">photo album</string>
    <string name="my_photo_album">My photo album</string>
    <string name="suggested_religion">Suggested religion</string>
    <string name="clear">Clear</string>
    <string name="priority">Priority</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="finances">Finances</string>
    <string name="notifications">Notifications</string>
    <string name="chat_introductions">Chat Introductions</string>
    <string name="change_phone_no">Change Number</string>
    <string name="confirmation">Confirmation</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="almost_there">Almost there!</string>
    <string name="there_">there!</string>
    <string name="make_display_picture">Make display picture</string>
    <string name="suggestions">Suggestions</string>
    <string name="choose_religion_to_add_here">Choose religion to add here</string>
    <string name="no_results_found">No Results Found</string>
    <string name="type_your_caste_here">Type your caste here</string>
    <string name="get_introduced">Get Introduced</string>
    <string name="all_notifications">All Notifications</string>
    <string name="messages">Messages</string>
    <string name="claimed_income">Claimed Income</string>
    <string name="by_logging_in_you_agree_to_out_term_privacy_policy">By login in you agree to my <u>\'Term\' and \'Privacy Policy\'</u></string>
    <string name="term_">\'Term\'</string>
    <string name="privacy_policy">\'Privacy Policy\'</string>
    <string name="continue_with_mobile_number">Continue with mobile number</string>
    <string name="message">Message</string>
    <string name="opinions">Opinions</string>
    <string name="connections">Connections</string>
    <string name="reminders">Reminders</string>
    <string name="net_worth_only_visible_to_you">Net Worth (Only visible to you)</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_country">Enter country</string>
    <string name="okay">Okay</string>
    <string name="reject_and_report">Reject and report</string>
    <string name="reject">Reject</string>
    <string name="view_profile">View Profile</string>
    <string name="unmatch">Unmatch</string>
    <string name="any">any</string>
    <string name="Any">Any</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy">Privacy</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="pause_search">Pause Search</string>
    <string name="delete_account">Delete Account</string>
    <string name="skip">Skip</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="add_new">Add New</string>
    <string name="more_steps_to_go">more steps to get started!</string>
    <string name="this_information_will_not_be_nshown_to_references">This information will not be\nshown to references</string>
    <string name="detecting">Detecting…</string>
    <string name="industry">Industry</string>
    <string name="gotra_">gotra</string>
    <string name="answer_or_skip">Answer or Skip</string>
    <string name="question_of_the_day">Question of the day</string>
    <string name="hide_this_answer"><u>Hide this answer?</u></string>
    <string name="the_answer_is_hidden"><u>This answer is hidden. Unhide?</u></string>
    <string name="recommendations">Recommendations</string>
    <string name="select_contact">Select contact</string>
    <string name="are_you_sure_you_want_to_unhide_this">Are you sure you want to unhide this?</string>
    <string name="are_you_sure_you_want_to_hide_this">Are you sure you want to hide this?</string>
    <string name="cancel">Cancel</string>
    <string name="send_request">Send Request</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="what_is_your_relationship">What is your relationship</string>
    <string name="you_can_not_add_your_self">You can not add yourself</string>
    <string name="Culture">Culture</string>
    <string name="Relationship_status">Relationship Status</string>
    <string name="Disability">Disability</string>
    <string name="Settle_location">Settle Location</string>
    <string name="ideal_age">Ideal age</string>
    <string name="ideal_height">Ideal height</string>
    <string name="Profession">Profession</string>
    <string name="unlock"><u>Unlock</u></string>
    <string name="Eating_habits">Eating habits</string>
    <string name="_18_years">18 years</string>
    <string name="_5_6_inches">5’6 inches</string>
    <string name="choose_browser">Select browser</string>
    <string name="no_browser_app_available">There is no browser on your mobile.</string>
    <string name="reference_found">Reference found!</string>
    <string name="questions">Questions</string>
    <string name="this_person_has_seen_your_answer">This person has seen your answer</string>
    <string name="height_">Height</string>
    <string name="it_ll_take_a_while_to_for_us_to_verify_your_aadhar_card">It’ll take a while to for\nus to verify your aadhar card.</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="add_details"><u>Add details</u></string>
    <string name="unpause_search">Unpause Search</string>
    <string name="you_have_been_referred">You have been referred</string>
    <string name="this_stays_between_us">This stays between us!</string>
    <string name="psst_between_nyou_and_me">Psst! Between you and me..</string>
    <string name="why_did_you_reject_them">Why did you reject them?</string>
    <string name="why_did_you_reject_him">Why did you reject him?</string>
    <string name="why_did_you_reject_her">Why did you reject her?</string>
    <string name="continue_">Continue</string>
    <string name="zodiac">Zodiac</string>
    <string name="loading">Loading..</string>
    <string name="as_error_has_occurred">As error\nhas occurred?</string>
    <string name="occurred">occurred?</string>
    <string name="common_friend_left_the_group">Common Friend left the group</string>
    <string name="days_left">days left</string>
    <string name="day_left">day left</string>
    <string name="intro">Intro</string>
    <string name="other">Other</string>
    <string name="loading1">Loading......................</string>
    <string name="loading2">Loading...........</string>
    <string name="loading3">Loading................</string>
    <string name="loading4">Loading...........</string>
    <string name="loading5">Loading...................</string>
    <string name="send_them_a_message">Send them a message</string>
    <string name="please_enter_your_aadhar_card_number">Please enter your aadhar card number</string>
    <string name="enter_your_aadhar_card_number">Enter your aadhar card number</string>
    <string name="we_will_send_you_an_otp_to_mobile_number_nregistered_with_this_aadhar_number">We will send you an OTP to mobile number \nregistered with this aadhar number.</string>
    <string name="let_s_get_your_nprofile_verified">Let’s get your\nprofile verified.</string>
    <string name="withdraw_application">Withdraw Application</string>
    <string name="abcdefghi">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
</resources>