<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".OtpActivity">

    <com.commonfriend.custom.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtVerification"
        style="@style/Text35RegularBlackStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:lineSpacingExtra="@dimen/_minus11sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/enter_your_verification_code" />


    <RelativeLayout
        android:id="@+id/otpNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text13RegularDarkGreyStyle"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:text="@string/to_verify_your_phone_number_we_ve_sent_you"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtdigit"
                style="@style/Text13RegularDarkGreyStyle"
                android:layout_width="wrap_content"
                android:text="@string/digit_otp_at_91_9560505818"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMNo"
                style="@style/Text13RegularDarkGreyStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:text="1223334511"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/editOption"
                style="@style/Text13RegularRedStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="start"
                android:text="@string/edit"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:weightSum="4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOtp1"
            style="@style/EditText25RegularblackStyle"
            android:layout_weight="1"
            android:background="@drawable/dr_ic_bg_otp"
            android:maxLength="1"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOtp2"
            style="@style/EditText25RegularblackStyle"
            android:layout_weight="1"
            android:background="@drawable/dr_ic_bg_otp"
            android:maxLength="1"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOtp3"
            style="@style/EditText25RegularblackStyle"
            android:layout_weight="1"
            android:background="@drawable/dr_ic_bg_otp"
            android:maxLength="1"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOtp4"
            style="@style/EditText25RegularblackStyle"
            android:layout_weight="1"
            android:background="@drawable/dr_ic_bg_otp"
            android:maxLength="1"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTerms"
        style="@style/Text10RegularGrayStyle"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:singleLine="false"
        android:text="@string/by_logging_in_you_agree_to_out_term_privacy_policy" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnResendOtp"
            style="@style/Text13RegularRedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/didn_t_get_a_code" />

    </RelativeLayout>

</LinearLayout>