<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlNameMainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".template.FirstTemplateActivity">

    <com.commonfriend.custom.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonView"
        android:layout_below="@+id/customHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/dr_ic_shield" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/infoMessage"
                    style="@style/Text10SatoshiMediumGrayStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/this_information_will_not_be_nshown_to_references" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtQuestion"
                style="@style/Text32RegularBlackStyle"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_minus4sdp"
                android:text="@string/where_are_you_located" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFirstName"
                style="@style/Text10SatoshiMediumGrayStyle"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/color_light_grey"
                android:digits="@string/abcdefghi"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapSentences"
                android:maxLength="32"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_grey"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLastName"
                style="@style/Text10SatoshiMediumGrayStyle"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/color_light_grey"
                android:digits="@string/abcdefghi"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textCapSentences"
                android:maxLength="32"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_grey"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/buttonView"
        layout="@layout/bottom_view" />

    <!-- <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNameContinue"
         style="@style/bottomButtonStyle"
         android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="@dimen/_20sdp"
         android:background="@drawable/dr_bg_btn_light"
         android:clickable="false"
         android:text="@string/strcontinue"
         android:textColor="@color/white"
         android:visibility="visible" />-->


</RelativeLayout>